--- a/index.html
+++ b/index.html
@@ -78,10 +78,14 @@
       tr = table.getElementsByTagName("tr");
 
       for (i = 0; i < tr.length; i++) {
-        td = tr[i].getElementsByTagName("td")[1];
-        if (td) {
-          txtValue = td.textContent || td.innerText;
-          if (txtValue.toUpperCase().indexOf(filter) > -1) {
+        td1 = tr[i].getElementsByTagName("td")[1];
+        td3 = tr[i].getElementsByTagName("td")[3];
+        if (td1 || td3) {
+          txtValue1 = td1.textContent || td1.innerText;
+          txtValue3 = td3.textContent || td3.innerText;
+          if (txtValue1.toUpperCase().indexOf(filter) > -1) {
+            tr[i].style.display = "";
+          } else if (txtValue3.toUpperCase().indexOf(filter) > -1) {
             tr[i].style.display = "";
           } else {
             tr[i].style.display = "none";
